[gd_scene load_steps=8 format=3 uid="uid://de5efn574omjt"]

[ext_resource type="Script" uid="uid://rudtu6r6lqfu" path="res://scripts/player.gd" id="1_3vyb7"]
[ext_resource type="AudioStream" uid="uid://ddavnyv878jb1" path="res://audio/shot-F5-V127-XBYW.mp3" id="2_g2els"]
[ext_resource type="Script" uid="uid://bup6d1gys2oeh" path="res://scripts/crosshair.gd" id="2_qhqgy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3vyb7"]
size = Vector2(94.04521, 93.37616)

[sub_resource type="Animation" id="Animation_g2els"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.52156866]
}

[sub_resource type="Animation" id="Animation_3vyb7"]
resource_name = "shot"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.100000024, 0.2),
"transitions": PackedFloat32Array(1, 0.8122522, 1),
"update": 0,
"values": [0.0, 0.7, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qhqgy"]
_data = {
&"RESET": SubResource("Animation_g2els"),
&"shot": SubResource("Animation_3vyb7")
}

[node name="Player" type="CharacterBody2D"]
physics_interpolation_mode = 1
scale = Vector2(0.5, 0.5)
collision_layer = 4
script = ExtResource("1_3vyb7")

[node name="Line2D" type="Line2D" parent="."]
visible = false
rotation = -0.7853982
scale = Vector2(0.99999994, 0.99999994)
points = PackedVector2Array(-44.54773, -44.54773, 44.54773, -44.54773, 44.54773, 45.961945, -45.254837, 45.254837)
closed = true
width = 5.0
default_color = Color(0.18859088, 0.5801689, 0.8281458, 1)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-21, 0, 0, -21, 21, 0, 0, 21)

[node name="ShotTimer" type="Timer" parent="."]
autostart = true

[node name="ShotArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShotArea"]
position = Vector2(0.23654431, 0.73654485)
rotation = -0.7853982
scale = Vector2(0.9999999, 0.9999999)
shape = SubResource("RectangleShape2D_3vyb7")

[node name="Polygon2D" type="Polygon2D" parent="ShotArea"]
position = Vector2(646, 62)
color = Color(0.15686275, 0.8352941, 0.9137255, 0.52156866)
polygon = PackedVector2Array(-647, -122, -585, -60, -646, 1, -706, -62)
uv = PackedVector2Array(-714.85706, -93.142845, -524.57135, -65.71427, -614.85706, -6.2857056, -710.85706, -60.57142, -810.3851, -155.81477)

[node name="Crosshair" type="Node2D" parent="ShotArea"]
script = ExtResource("2_qhqgy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../ShotArea/Polygon2D")
libraries = {
&"": SubResource("AnimationLibrary_qhqgy")
}

[node name="ShotAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_g2els")

[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
